# promptline-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  version.hpp.in
colors/: default.toml
config_samples/: default_segments.toml  gruvbox_colors.toml
include/: arrows.hpp  bash_formatter.hpp  config.hpp  config_parser.hpp  cwd_segment.hpp  formatter.hpp  git_segment.hpp  prompt.hpp  rc_segment.hpp  segment.hpp  ssh_host_segment.hpp  test_case.hpp  time_segment.hpp  toml.hpp  user_segment.hpp  version.h  version.hpp  virtualenv_segment.hpp  zsh_formatter.hpp
src/: config.cpp  config_parser.cpp  cwd_segment.cpp  debug.cpp  git_segment.cpp  main.cpp  prompt.cpp  rc_segment.cpp  segment.cpp  ssh_host_segment.cpp  time_segment.cpp  toml.cpp  toml_test.cpp  user_segment.cpp  virtualenv_segment.cpp
